--fix design [scrollbar]

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,32 @@
   margin: 0;
 }
 
+*::-webkit-scrollbar {
+  width: 5px;
+  /* THIS WILL RESET THE DEFAULT SCORLLBAR STYLING */
+}
+
+
+*::-webkit-scrollbar:hover {
+  width: 0rem;
+  /* THIS WILL RESET THE DEFAULT SCORLLBAR STYLING */
+}
+
+
+/* TO STYLE THE SCROLLBAR TRACK */
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+  /* THIS WILL SET THE COLOR OF THE SCROLLBAR TRACK */
+}
+
+/* TO STYLE THE SCROLLBAR THUMB */
+*::-webkit-scrollbar-thumb {
+  background-color: transparent;
+  border-radius: 0px;
+  height: 0px;
+}
+
+
 html,
 body {
   max-width: 100vw;
